# ironcompress

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  improvement.yml
.github/workflows/: ci.yml  pages.yml  publish.yml  release.yml
benchmark/: build.gradle.kts  settings.gradle.kts
benchmark/scripts/: bench.sh
benchmark/src/main/java/io/ironcompress/benchmark/competitor/: BrotliJavaCompressor.java  Bzip2JavaCompressor.java  Compressor.java  CompressorFactory.java  DeflateJavaCompressor.java  GzipJavaCompressor.java  IronCompressAdapter.java  IronCompressZeroCopyAdapter.java  Lz4JavaCompressor.java  LzfJavaCompressor.java  Lzma2JavaCompressor.java  (+2 more)
benchmark/src/test/java/io/ironcompress/benchmark/: CrossValidationTest.java
docs/: index.html
java/: build.gradle.kts  settings.gradle.kts
java/src/main/java/io/ironcompress/: IronCompress.java  IronCompressor.java  NativeLib.java
java/src/main/java/io/ironcompress/ffi/: NativeLib.java  NativeLoader.java
java/src/main/java/io/ironcompress/model/: Algorithm.java  IronCompressException.java  NativeError.java
java/src/test/java/io/ironcompress/: CompressNativeTest.java  IronCompressTest.java  NativeLibTest.java
java/src/test/java/io/ironcompress/ffi/: NativeLibTest.java  NativeLoaderTest.java
java/src/test/java/io/ironcompress/model/: AlgorithmTest.java  IronCompressExceptionTest.java  NativeErrorTest.java
rust/: Cargo.toml
rust/src/: compress.rs  error.rs  ffi.rs  lib.rs
(+3 files in other folders)
