[package]
name = "ironcompress"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "unwind"
lto = "fat"
codegen-units = 1
opt-level = 3

[dependencies]
lz4_flex = "0.12.0"
snap = "1.1"
flate2 = "1.1"
brotli = "8.0"
xz2 = "0.1"
bzip2 = { version = "0.6.1", default-features = false, features = ["bzip2-sys"] }
zstd = "0.13"
lzf = "1.0"
